--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="space-y-3">
+<div class="space-y-3 w-[840px]">
   <% @chefs.each do |chef| %>
     <%= render partial: "shows/chef", locals: { chef: chef }%>
   <% end %>
