Add opensans font to tailwind

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Open Sans";
+  src: font-url("OpenSans-Medium.ttf") format("ttf");
+}
+
 /*
 
 @layer components {
