--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main>
+      <div class="py-5 mb-5 w-full bg-red-200">
+        A header
+      </div>
       <%= yield %>
     </main>
   </body>
