--- a/app/views/shows/_chef.html.erb
+++ b/app/views/shows/_chef.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="flex-grow py-4 px-6 space-y-6">
     <% if chef.restaurants.empty? %>
-      <div class="font-bold text-xl text-neutral-400">
+      <div class="font-semibold text-xl text-neutral-400">
         No restaurants reported
       </div>
     <% else %>
