--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -10,8 +10,12 @@
         </div>
         <div data-controller="dropdown" class="relative inline-block text-left">
           <div>
-            <button data-dropdown-target="button" data-action="keydown.esc->dropdown#toggle dropdown#toggle click@window->dropdown#hide" type="button" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
-              Options
+            <button data-dropdown-target="button" data-action="keydown.esc->dropdown#toggle dropdown#toggle click@window->dropdown#hide" type="button" class="min-w-[125px] inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
+              <% if @season %>
+                <%= @season.full_name %>
+              <% else %>
+                All Seasons
+              <% end %>
               <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
               </svg>
@@ -35,8 +39,10 @@
         <%= render partial: "shows/chef", locals: { chef: chef }%>
       <% end %>
     </div>
-    <div class="mt-4 mb-8">
-      <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
-    </div>
+    <% if @pagy %>
+      <div class="mt-4 mb-8">
+        <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+      </div>
+    <% end %>
   </div>
 </div>
