--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,7 @@
 
   <body>
     <main>
-      <div class="py-5 mb-5 w-full bg-red-200">
-        A header
-      </div>
+      <%= render 'layouts/navbar' %>
       <%= yield %>
     </main>
   </body>
