Add max width to main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   </head>
 
   <body>
-    <main>
-      <%= render 'layouts/navbar' %>
+    <%= render 'layouts/navbar' %>
+    <main class="max-w-7xl mx-auto">
       <%= yield %>
     </main>
   </body>
