--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,12 @@
-<div class="space-y-3 w-[840px]">
-  <% @chefs.each do |chef| %>
-    <%= render partial: "shows/chef", locals: { chef: chef }%>
-  <% end %>
+<div class="px-10">
+  <div>
+    <h1 class="text-3xl font-bold mb-5">
+      Shows
+    </h1>
+    <div class="flex flex-wrap gap-4">
+      <% @shows.each do |show| %>
+        <%= render partial: "shows/show_card", locals: { show: show } %>
+      <% end %>
+    </div>
+  </div>
 </div>
