--- a/app/views/shows/_restaurant.html.erb
+++ b/app/views/shows/_restaurant.html.erb
@@ -1,6 +1,6 @@
-<div class="space-y-3 text-sm text-neutral-500 pb-5 [&:not(:last-child)]:border-b ">
+<div class="space-y-3 text-sm text-neutral-500 pb-5 [&:not(:last-child)]:border-b">
   <div class="flex">
-    <div class="mr-5 font-bold text-xl text-black"><%= restaurant.name %></div>
+    <div class="mr-5 font-bold md:text-xl text-lg text-black"><%= restaurant.name %></div>
     <%= render partial: "shows/rating", locals: { rating: restaurant.rating } %>
   </div>
   <div class="space-x-2">
@@ -10,7 +10,7 @@
       </span>
     <% end %>
   </div>
-  <div>
+  <div class="flex">
     <%= restaurant.city %>, <%= restaurant.state %>
   </div>
 </div>
