--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,4 +1,4 @@
-<div class="py-6 px-5 w-full md:flex">
+<div class="py-6 px-5 w-full md:flex mb-10">
   <div class="text-lg mb-8 md:px-10">
     <div class="min-h-48 pt-4 flex flex-col items-center">
       <div class="rounded-full w-28 h-28 bg-red-400 mb-2">
