--- a/app/views/icons/_star_half.html.erb
+++ b/app/views/icons/_star_half.html.erb
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 relative">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="md:size-6 size-5 relative">
   <defs>
     <linearGradient id="grad">
       <stop offset="50%" stop-color="#facc15"/>
