--- a/app/views/shows/_chef.html.erb
+++ b/app/views/shows/_chef.html.erb
@@ -1,17 +1,15 @@
-<div class="flex w-full [&:not(:last-child)]:border-b">
-  <%= link_to(chef) do %>
-    <div class="min-w-40 min-h-48 pt-4 flex flex-col items-center">
-      <div class="rounded-full w-24 h-24 bg-red-400 mb-2">
-      </div>
-      <div>
-        <%= chef.first_name %>
-      </div>
-      <div>
-        <%= chef.last_name %>
-      </div>
+<div class="w-full grow [&:not(:last-child)]:border-b md:flex">
+  <div class="flex items-center md:flex-col md:max-w-40 md:min-h-48 md:mr-2">
+    <div class="rounded-full size-10 bg-neutral-400 mb-2 mr-2 md:mr-0 md:size-20">
     </div>
-  <% end %>
-  <div class="flex-grow py-4 px-6 space-y-6">
+    <span class="mr-1 md:mr-0">
+      <%= chef.first_name %>
+    </span>
+    <span>
+      <%= chef.last_name %>
+    </span>
+  </div>
+  <div class="flex-grow py-4 space-y-6 md:px-6">
     <% if chef.restaurants.empty? %>
       <div class="font-semibold text-xl text-neutral-400">
         No restaurants reported
