--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,50 +1,36 @@
-<div class="flex py-6">
-  <div class="px-10">
-    <p class="text-lg text-neutral-800 font-semibold mt-2 mb-4">
-      Filters
-    </p>
-    <div class="text-md">
-      <div class="pb-4 [&:not(:last-child)]:border-b">
-        <div class="font-semibold mb-2">
-          Season
-        </div>
-        <div data-controller="dropdown" class="relative inline-block text-left">
-          <div>
-            <button data-dropdown-target="button" data-action="keydown.esc->dropdown#toggle dropdown#toggle click@window->dropdown#hide" type="button" class="w-[125px] inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
-              <span class="truncate">
-                <% if @season %>
-                  <%= @season.full_name %>
-                <% else %>
-                  All Seasons
-                <% end %>
-              </span>
-              <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
-              </svg>
-            </button>
-          </div>
-          <div data-dropdown-target="menu" style="display:none" class="absolute left-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
-            <div class="py-1" role="none">
-              <%= link_to("All Seasons", @show, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
-              <% @seasons.each do |s| %>
-                <%= link_to_season(s, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
-              <% end %>
-            </div>
-          </div>
+<div class="md:flex py-6">
+  <div class="md:px-10 px-5 text-lg mb-8">
+    <div class="font-semibold mb-2">
+      Season
+    </div>
+    <div data-controller="dropdown" class="relative inline-block text-left">
+      <button data-dropdown-target="button" data-action="keydown.esc->dropdown#toggle dropdown#toggle click@window->dropdown#hide" type="button" class="w-24 inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
+        <span class="truncate">
+          <% if @season %>
+            <%= @season.full_name %>
+          <% else %>
+            All Seasons
+          <% end %>
+        </span>
+        <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+        </svg>
+      </button>
+      <div data-dropdown-target="menu" style="display:none" class="absolute left-0 z-10 mt-2 w-56 max-h-80 overflow-y-auto origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+        <div class="py-1" role="none">
+          <%= link_to("All Seasons", @show, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
+          <% @seasons.each do |s| %>
+            <%= link_to_season(s, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
+          <% end %>
         </div>
       </div>
     </div>
   </div>
-  <div class="w-full max-w-[840px] px-10 flex flex-col items-center">
-    <div class="space-y-3 w-full">
+  <div class="px-5 max-w-3xl flex flex-col items-center">
+    <div class="w-full space-y-6">
       <% @chefs.each do |chef| %>
         <%= render partial: "shows/chef", locals: { chef: chef }%>
       <% end %>
     </div>
-    <% if @pagy %>
-      <div class="mt-4 mb-8">
-        <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
-      </div>
-    <% end %>
   </div>
 </div>
