--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -18,7 +18,7 @@
       </button>
       <div data-dropdown-target="menu" style="display:none" class="absolute left-0 z-10 mt-2 w-56 max-h-80 overflow-y-auto origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
         <div class="py-1" role="none">
-          <%= link_to("All Seasons", @show, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
+          <%= link_to("All Seasons", root_path, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
           <% @seasons.each do |s| %>
             <%= link_to_season(s, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
           <% end %>
