Improve accessibility of dropdown

--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -3,8 +3,8 @@
     <div class="font-semibold mb-2">
       Season
     </div>
-    <div data-controller="dropdown" class="relative inline-block text-left">
-      <button data-dropdown-target="button" data-action="keydown.esc->dropdown#toggle dropdown#toggle click@window->dropdown#hide" type="button" class="w-24 inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
+    <div data-controller="dropdown" data-action="keydown.esc->dropdown#hide keydown.up->dropdown#prevItem keydown.down->dropdown#nextItem click@window->dropdown#hide" data-dropdown-open-value="false" class="relative inline-block text-left">
+      <button data-dropdown-target="button" data-action="dropdown#toggle:stop" type="button" class="w-24 inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-haspopup="true">
         <span class="truncate">
           <% if @season %>
             <%= @season.full_name %>
@@ -16,12 +16,12 @@
           <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
         </svg>
       </button>
-      <div data-dropdown-target="menu" style="display:none" class="absolute left-0 z-10 mt-2 w-56 max-h-80 overflow-y-auto origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+      <div data-dropdown-target="menu" class="absolute hidden left-0 z-10 mt-2 w-56 max-h-80 overflow-y-auto origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
         <div class="py-1" role="none">
-          <%= link_to("All Seasons", root_path, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
+          <%= link_to("All Seasons", root_path, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 focus:text-gray-900 focus:bg-gray-100 focus:outline-none block px-4 py-2 text-sm", role: "menuitem", data: { dropdown_target: "menuItem" } }) %>
           <% @seasons.each do |s| %>
-            <%= link_to_season(s, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 block px-4 py-2 text-sm", role: "menuitem", tabindex: "-1" }) %>
-          <% end %>
+            <%= link_to_season(s, { class: "text-gray-700 hover:text-gray-900 hover:bg-gray-100 focus:text-gray-900 focus:bg-gray-100 focus:outline-none block px-4 py-2 text-sm", role: "menuitem", data: { dropdown_target: "menuItem" } }) %>
+            <% end %>
         </div>
       </div>
     </div>
