--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="px-5 max-w-3xl flex flex-col items-center">
+  <div class="px-5 max-w-3xl flex flex-col grow items-center">
     <div class="w-full space-y-6">
       <% @chefs.each do |chef| %>
         <%= render partial: "shows/chef", locals: { chef: chef }%>
