--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <main class="max-w-7xl mx-auto">
+    <main class="my-4 max-w-7xl mx-auto">
       <%= yield %>
     </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
