--- a/app/views/shows/_chef.html.erb
+++ b/app/views/shows/_chef.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full grow [&:not(:last-child)]:border-b md:flex">
-  <div class="flex items-center md:flex-col md:max-w-40 md:min-h-48 md:mr-2">
+  <div class="flex items-center md:flex-col md:w-40 md:min-h-48 md:mr-2">
     <div class="rounded-full size-10 bg-neutral-400 mb-2 mr-2 md:mr-0 md:size-20">
     </div>
     <span class="mr-1 md:mr-0">
