--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -8,23 +8,17 @@
 }
 
 .pagy {
-  @apply flex space-x-1 font-semibold text-sm text-gray-500;
-  a:not(.gap) {
-    @apply block rounded-lg px-3 py-1 bg-gray-200;
-    &:hover {
-      @apply bg-gray-300;
-    }
-    &:not([href]) { /* disabled links */
-      @apply text-gray-300 bg-gray-100 cursor-default;
-    }
-    &.current {
-      @apply text-white bg-gray-400;
-    }
-  }
-  label {
-    @apply inline-block whitespace-nowrap bg-gray-200 rounded-lg px-3 py-0.5;
-    input {
-      @apply bg-gray-100 border-none rounded-md;
-    }
-  }
+  @apply flex space-x-1 font-semibold text-sm text-neutral-500;
+}
+
+.pagy a {
+  @apply block px-3 py-1 text-neutral-500;
+}
+
+.pagy a:hover {
+  @apply text-neutral-700
+}
+
+.pagy a.current {
+  @apply text-neutral-700
 }
